// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile k huge 1`] = `
<Link
  linkStyle={
    Object {
      "flexDirection": "row",
      "padding": 10,
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1.5}
    fill={true}
    style={
      Object {
        "paddingRight": 10,
        "width": "50%",
      }
    }
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
  />
  <View
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 25,
          "fontWeight": "900",
          "includeFontPadding": false,
          "lineHeight": 25,
          "marginBottom": 10,
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </View>
</Link>
`;

exports[`tile k medium 1`] = `
<Link
  linkStyle={
    Object {
      "flexDirection": "row",
      "padding": 10,
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1.5}
    fill={true}
    style={
      Object {
        "paddingRight": 10,
        "width": "50%",
      }
    }
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
  />
  <View
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "900",
          "includeFontPadding": false,
          "lineHeight": 22,
          "marginBottom": 10,
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </View>
</Link>
`;

exports[`tile k small 1`] = `
<Link
  linkStyle={
    Object {
      "flexDirection": "row",
      "padding": 10,
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1.5}
    fill={true}
    style={
      Object {
        "paddingRight": 10,
        "width": "50%",
      }
    }
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
  />
  <View
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 18,
          "fontWeight": "900",
          "includeFontPadding": false,
          "lineHeight": 18,
          "marginBottom": 10,
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </View>
</Link>
`;

exports[`tile k wide 1`] = `
<Link
  linkStyle={
    Object {
      "flexDirection": "row",
      "padding": 10,
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1.5}
    fill={true}
    style={
      Object {
        "paddingRight": 10,
        "width": "50%",
      }
    }
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
  />
  <View
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "900",
          "includeFontPadding": false,
          "lineHeight": 22,
          "marginBottom": 10,
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </View>
</Link>
`;

exports[`tile k without breakpoint should be like small 1`] = `
<Link
  linkStyle={
    Object {
      "flexDirection": "row",
      "padding": 10,
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1.5}
    fill={true}
    style={
      Object {
        "paddingRight": 10,
        "width": "50%",
      }
    }
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
  />
  <View
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 18,
          "fontWeight": "900",
          "includeFontPadding": false,
          "lineHeight": 18,
          "marginBottom": 10,
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </View>
</Link>
`;
